fixing failing multinode test and format errors
Signed-off-by: Jeremy Dupras <jdupras@amazon.com>